Removed JodaTime from dependency's